--- a/infrastructure/view/database_view.xml
+++ b/infrastructure/view/database_view.xml
@@ -188,12 +188,45 @@
     </field>
 </record>
 
+<!-- KANBAN -->
+<record model="ir.ui.view" id="view_database_kanban">
+    <field name="name">infrastructure.database.kanban</field>
+    <field name="model">infrastructure.database</field>
+    <field name="arch" type="xml">
+        <kanban class="oe_background_grey">
+            <field name="name"/>
+            <field name="main_hostname"/>
+            <field name="color"/>
+            <field name="state"/>
+            <templates>
+                <t t-name="kanban-box">
+                    <div t-attf-class="oe_kanban_color_#{kanban_getcolor(record.color.raw_value)} oe_kanban_card">
+                        <div class="oe_dropdown_toggle oe_dropdown_kanban" groups="base.group_user">
+                            <span class="oe_e">í</span>
+                            <ul class="oe_dropdown_menu">
+                                <t t-if="widget.view.is_action_enabled('edit')"><li><a type="edit">Database Settings</a></li></t>
+                                <t t-if="widget.view.is_action_enabled('delete')"><li><a type="delete">Delete</a></li></t>
+                                <li><ul class="oe_kanban_colorpicker" data-field="color"/></li>
+                            </ul>
+                        </div>
+                        <div class="oe_kanban_content" style="width: 150px; height: 80px; margin: 0 auto;">
+                            <h4 class="text-center"><a type="open"><field name="name"/></a></h4>
+                            <a  t-att-href="record.main_hostname.value" target="_blank"><field name="main_hostname"/></a>
+                        </div>
+                        <div class="oe_clear"/> 
+                    </div>
+                </t>
+            </templates>
+        </kanban>
+    </field>
+</record>
+
 <record id="action_infrastructure_database_databases" model="ir.actions.act_window">
     <field name="name">Databases</field>
     <field name="res_model">infrastructure.database</field>
     <field name="view_type">form</field>
-    <field name="view_mode">tree,form</field>
-    <field name="view_id" ref="view_infrastructure_database_tree"/>
+    <field name="view_mode">kanban,tree,form</field>
+    <field name="view_id" ref="view_database_kanban"/>
     <field name="search_view_id" ref="view_infrastructure_database_filter"/>
     <field name="domain">[]</field>
 </record>
