--- a/infrastructure/view/database_view.xml
+++ b/infrastructure/view/database_view.xml
@@ -132,7 +132,7 @@
                                 <field name="catchall_enable"/><button class="oe_link" type="object" name="config_catchall" attrs="{'invisible':['|',('state','!=','active'),('catchall_enable','=',False)]}" string="Config Catchall"/>
                             </div>
                             <field name="alias_hostname_id" attrs="{'invisible':[('catchall_enable','=',False)],'required':[('catchall_enable','=',True)]}" domain="[('server_id','=',server_id)]"/>
-                            <field name="alias_prefix" attrs="{'invisible':['|',('catchall_enable','=',False),('alias_hostname_wildcard','=',False)],'required':[('alias_hostname_wildcard','=',True),('catchall_enable','=',True)]}"/>
+                            <field name="alias_prefix" attrs="{'invisible':['|',('catchall_enable','=',False),('alias_hostname_wildcard','=',False)]}"/>
                             <field name="domain_alias" attrs="{'invisible':[('catchall_enable','=',False)]}"/>
                             <field name="alias_hostname_wildcard" attrs="{'invisible':[('catchall_enable','=',False)]}" invisible="1"/>
                         </group>
