--- a/infrastructure/view/instance_view.xml
+++ b/infrastructure/view/instance_view.xml
@@ -247,7 +247,7 @@
                         <div class="oe_dropdown_toggle oe_dropdown_kanban" groups="base.group_user">
                             <span class="oe_e">í</span>
                             <ul class="oe_dropdown_menu">
-                                <t t-if="widget.view.is_action_enabled('edit')"><li><a type="edit">Environment Settings</a></li></t>
+                                <t t-if="widget.view.is_action_enabled('edit')"><li><a type="edit">Instance Settings</a></li></t>
                                 <t t-if="widget.view.is_action_enabled('delete')"><li><a type="delete">Delete</a></li></t>
                                 <li><ul class="oe_kanban_colorpicker" data-field="color"/></li>
                             </ul>
