--- a/infrastructure/view/database_view.xml
+++ b/infrastructure/view/database_view.xml
@@ -80,6 +80,7 @@
                     <button icon="fa-copy" type="action" string="Duplicate" class="oe_stat_button" name="%(action_infrastructure_duplicate_db_wizard)d" states="active"/>
                     <button icon="fa-trash-o" type="object" string="Drop" class="oe_stat_button" name="drop_db" states="active" confirm="Are you sure you want to drop this database? This can not be undone"/>
                     <button icon="fa-pencil" type="action" string="Rename" class="oe_stat_button" name="%(action_infrastructure_rename_database_wizard)d" states="active"/>
+                    <button icon="fa-pencil" type="action" string="Restore" class="oe_stat_button" name="%(action_infrastructure_restore_from_file_wizard)d" states="draft"/>
                 </div>
                  <group>
                     <group>
