--- a/infrastructure/view/database_view.xml
+++ b/infrastructure/view/database_view.xml
@@ -63,9 +63,9 @@
             <sheet string="database">
                 <div class="col-md-6">
                     <h2>
-                        <field name="server_id" class="oe_inline"/> / <field name="environment_id" class="oe_inline"/> / <field name="instance_id" class="oe_inline"/>
+                        <field name="server_id" class="oe_inline"/> / <field name="environment_id" class="oe_inline"/> / <field name="instance_id" options="{'no_create': True}" class="oe_inline"/>
                     </h2>
-                    <field name="database_type_id" class="oe_edit_only" default_focus="1" placeholder="Type..."/>
+                    <field name="database_type_id" options="{'no_create': True}" class="oe_edit_only" default_focus="1" placeholder="Type..."/>
                     <h1>
                         <field name="name" placeholder="Name..."/>
                     </h1>
@@ -81,6 +81,7 @@
                     <button icon="fa-copy" type="action" string="Duplicate" class="oe_stat_button" name="%(action_infrastructure_duplicate_db_wizard)d" states="active"/>
                     <button icon="fa-trash-o" type="object" string="Drop" class="oe_stat_button" name="drop_db" states="active" confirm="Are you sure you want to drop this database? This can not be undone"/>
                     <button icon="fa-pencil" type="action" string="Rename" class="oe_stat_button" name="%(action_infrastructure_rename_database_wizard)d" states="active"/>
+                    <button icon="fa-pencil" type="action" string="Change Pass" class="oe_stat_button" name="%(action_infrastructure_change_db_passwd_wizard)d" states="active"/>
                     <button icon="fa-arrow-circle-up" type="action" string="Restore" class="oe_stat_button" name="%(action_infrastructure_restore_from_file_wizard)d" states="draft"/>
                 </div>
                  <group>
@@ -95,7 +96,7 @@
                             <button name="show_passwd"
                                 string="⇒ View Password"
                                 type="object"
-                                class="oe_link oe_read_only"/>
+                                class="oe_link"/>
                         </div>
                         <field name="main_hostname" widget="url"/>
                     </group>
@@ -126,14 +127,14 @@
                         <group>
                             <label for="smtp_server_id"/>
                             <div class="oe_inline">
-                                <field name="smtp_server_id" class="oe_inline"/>
+                                <field name="smtp_server_id" options="{'no_create': True}" class="oe_inline"/>
                                 <button class="oe_link oe_inline" type="object" name="upload_mail_server_config" attrs="{'invisible':['|',('state','!=','active'),('smtp_server_id','=',False)]}" string="Upload Config"/>
                             </div>
                             <label for="catchall_enable"/>
                             <div class="oe_inline">
                                 <field name="catchall_enable"/><button class="oe_link" type="object" name="config_catchall" attrs="{'invisible':['|',('state','!=','active'),('catchall_enable','=',False)]}" string="Config Catchall"/>
                             </div>
-                            <field name="alias_hostname_id" attrs="{'invisible':[('catchall_enable','=',False)],'required':[('catchall_enable','=',True)]}" domain="[('server_id','=',server_id)]"/>
+                            <field name="alias_hostname_id" attrs="{'invisible':[('catchall_enable','=',False)],'required':[('catchall_enable','=',True)]}" domain="[('server_id','=',server_id)]" options="{'no_create': True}"/>
                             <field name="alias_prefix" attrs="{'invisible':['|',('catchall_enable','=',False),('alias_hostname_wildcard','=',False)]}"/>
                             <field name="domain_alias" attrs="{'invisible':[('catchall_enable','=',False)]}"/>
                             <field name="alias_hostname_wildcard" attrs="{'invisible':[('catchall_enable','=',False)]}" invisible="1"/>
