--- a/infrastructure/view/environment_view.xml
+++ b/infrastructure/view/environment_view.xml
@@ -52,11 +52,11 @@
             <sheet string="environment">
                 <div class="col-md-6">
                     <h2 class="oe_inline">
-                        <field name="server_id" class="oe_inline"/>
+                        <field name="server_id" options="{'no_create': True}" class="oe_inline"/>
                     </h2>
                     <h1>
                         <field name="partner_id" default_focus="1" placeholder="Partner..."/>
-                        <field name="odoo_version_id" placeholder="Odoo Version..."/>
+                        <field name="odoo_version_id" options="{'no_create': True}" placeholder="Odoo Version..."/>
                     </h1>
                 </div>
                 <div class="oe_right oe_button_box" name="buttons">
