--- a/infrastructure/wizard/copy_data_from_instance_view.xml
+++ b/infrastructure/wizard/copy_data_from_instance_view.xml
@@ -10,7 +10,7 @@
             <group>
                 <field name="server_id"/>
                 <field name="target_instance_id"/>
-                <field name="source_instance_id"/>
+                <field name="source_instance_id" options="{'no_create': True}"/>
             </group>
             <footer>
                 <button name="action_confirm" confirm="All database data and filestore data will be delete and can not be recovered, are you sure you want to continue?" string="Copy Data" type="object" class="oe_highlight"/>
