--- a/infrastructure/view/database_view.xml
+++ b/infrastructure/view/database_view.xml
@@ -124,18 +124,20 @@
                         <field name="backup_ids"/>
                     </page>
                     <page string="email Config" states="active" name="email_config">
+                        <p>You can only choose hostnames that are configured in this server and that has partner = False or partner = this environment partner</p>
+                        <p>You can only choose smtp servers that has partner = False or partner = this environment partner</p>
                         <group>
                             <label for="smtp_server_id"/>
                             <div class="oe_inline">
-                                <field name="smtp_server_id" options="{'no_create': True}" class="oe_inline"/>
+                                <field name="smtp_server_id" domain="['|', ('partner_id','=', False), ('partner_id','=', partner_id)]" context="{'default_partner_id': partner_id}" class="oe_inline"/>
                                 <button class="oe_link oe_inline" type="object" name="upload_mail_server_config" attrs="{'invisible':['|',('state','!=','active'),('smtp_server_id','=',False)]}" string="Upload Config"/>
                             </div>
                             <label for="catchall_enable"/>
                             <div class="oe_inline">
                                 <field name="catchall_enable"/><button class="oe_link" type="object" name="config_catchall" attrs="{'invisible':['|',('state','!=','active'),('catchall_enable','=',False)]}" string="Config Catchall"/>
                             </div>
-                            <field name="alias_hostname_id" attrs="{'invisible':[('catchall_enable','=',False)],'required':[('catchall_enable','=',True)]}" domain="[('server_id','=',server_id)]" options="{'no_create': True}"/>
-                            <field name="alias_prefix" attrs="{'invisible':['|',('catchall_enable','=',False),('alias_hostname_wildcard','=',False)]}"/>
+                            <field name="alias_hostname_id" attrs="{'invisible':[('catchall_enable','=',False)],'required':[('catchall_enable','=',True)]}" domain="[('server_id','=',server_id), '|', ('partner_id','=', False), ('partner_id','=', partner_id)]" options="{'no_create': True}"/>
+                            <field name="alias_prefix" attrs="{'invisible':['|',('catchall_enable','=',False),('alias_hostname_wildcard','=',False)], 'required':['|',('catchall_enable','=',True),('alias_hostname_wildcard','=',True)]}"/>
                             <field name="domain_alias" attrs="{'invisible':[('catchall_enable','=',False)]}"/>
                             <field name="alias_hostname_wildcard" attrs="{'invisible':[('catchall_enable','=',False)]}" invisible="1"/>
                         </group>
