--- a/infrastructure/view/mailserver_view.xml
+++ b/infrastructure/view/mailserver_view.xml
@@ -27,6 +27,9 @@
         <form position="attributes">
             <attribute name="string">Infrastructure Mailserver</attribute>
         </form>
+        <field name="sequence" position="before">
+            <field name="partner_id"/>
+        </field>
         <field name="sequence" position="after">
             <field name="external_id"/>
         </field>
