--- a/infrastructure/view/instance_view.xml
+++ b/infrastructure/view/instance_view.xml
@@ -201,6 +201,7 @@
                                 <field name="conf_path"/>
                                 <field name="conf_file_path"/>
                                 <field name="backups_path"/>
+                                <field name="syncked_backup_path"/>
                                 <field name="logfile"/>
                                 <field name="data_dir"/>
                             </group>
